# Artifact-Locker

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
scripts/: pre-commit  pre-push  release.sh  test.sh
src/artifact_locker/: cli.py  models.py  oci.py  output.py  paths.py  state.py
tests/: test_cli.py
